# OpenCVTask

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Deploy.cmake  OpenCVTask.sln  README.md
OpenCVTask/: CMakeLists.txt  OpenCVTask.vcxproj  OpenCVTask.vcxproj.filters  main.cpp
OpenCVTask/starburst/: InFrame.comet  Lines.comet  OCVClient.comp  OCVSat.sat  OCVTask.comp  OCVTaskLines.comp  OCVTaskSat.sat  OCVTemplate.stpl  OutLines.comet  TaskParameters.comet
TestClient/: CMakeLists.txt  TestClient.vcxproj  TestClient.vcxproj.filters  main.cpp
TestClient/NvEncoder/: NvEncoder.cpp  NvEncoderCuda.cpp
starburst/include/: comet.h  common.h  engine.h  igc.h  nebulanetwork.h
starburst/lib/: satellite.lib
starburst/lib/Win64/: satellite.lib
